# Search-Engine

./: AVLTree.h  AVLTree.txt  CMakeLists.txt  DataStructures.h  FinalPro  FinalPro.pro  HashTable.h  QueryEngine.cpp  QueryEngine.h  main.cpp  parser.cpp  parser.h  porter2_stemmer.cpp  porter2_stemmer.h  ui.cpp  ui.h  wordobject.cpp  wordobject.h
.github/workflows/: build.yaml
external-libs/porter2_stemmer-master/util/: string_view.h
src/: CS2341-SearchEngine-MikeCuzzo.pro  QueryEngine.h  main.cpp  parser.cpp  parser.h  ui.cpp  ui.h
src/data-structures/: HashTable.h  wordobject.cpp  wordobject.h
